cmake_minimum_required(VERSION 3.20)
set(TARGET_NAME chapter-1)
project(${TARGET_NAME})
find_package(OpenCV REQUIRED)
add_executable(mat mat.cxx)
add_executable(logo logo.cxx)
add_executable(load_display_save load_display_save.cxx)
target_link_libraries(mat PRIVATE ${OpenCV_LIBS})
target_link_libraries(logo PRIVATE ${OpenCV_LIBS})
target_link_libraries(load_display_save PRIVATE ${OpenCV_LIBS})
